# GSCX

./: .gitignore  MINGW_COMPILATION_INSTRUCTIONS.txt  NOTICE  README.md  build_cpp.ps1  build_dotnet.ps1  docs.md  license  main.py  mingw_terminal.bat  run_gui.ps1  runlog.txt
docs/: recovery-mode.md  setup.md
docs/API/: lua-api.md  page.md
docs/Bootloader/: page.md
docs/Core/: boot-sequence.md  page.md  recovery-mode.md  syscon-virtualization.md
docs/Scripting/: page.md
docs/cpp/: README.md
docs/introduction/: README.md
docs/portuguese_translation/: README.md
docs/roadmap/: VERSION_ROADMAP.md
dotnet/Spoofing/: HardwareSpoof.cs  Spoofing.csproj  SpoofingInterop.cs
pyapp/: requirements.txt
pyapp/gscx_gui/: __init__.py  app.py  i18n.py  main_window.py  modules_loader.py
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/: cell_ir.h  gscore_format.h  host_services_c.h  hypervisor.h  logger.h  module_api.h
src/core/src/: decoder.cpp  gscore_loader.cpp  hypervisor.cpp  hypervisor_asm.s  jit_runtime.cpp  module_host.cpp  translator.cpp
src/cpp/: CMakeLists.txt
src/cpp/include/gscx/: c_api.h  cpp_utils.h
src/cpp/src/: bindings_c.cpp  cpp_utils.cpp
src/modules/cpu_cell/: CMakeLists.txt
src/modules/cpu_cell/src/: cpu_cell.cpp  ppu_core.cpp  ppu_core.h  spu_core.cpp  spu_core.h
src/modules/gpu_rsx/: CMakeLists.txt
src/modules/gpu_rsx/src/: gpu_rsx.cpp
src/modules/recovery/: CMakeLists.txt
src/modules/recovery/src/: bootloader.cpp  ee_engine.cpp  ee_engine.h  ps3_models.cpp  ps3_models.h  pup_reader.cpp  pup_reader.h  recovery.cpp  recovery_entry.asm  recovery_entry.c  recovery_i18n.cpp  recovery_i18n.h  recovery_mode.cpp  recovery_mode.h
src/modules/rsx/src/: rsx_core.cpp  rsx_core.h
src/tools/: gscore_packer.cpp
tests/: exec.py  pupreader.cpp
(+1 files in other folders)
